<resources>
    <string name="app_name">myHomework</string>
    <string name="about">This app was developed by the Association of Mobile Developers at the Milwaukee School of Engineering in order to learn the basics of android programming by copying the app by Instin LLC \"myHomework\"</string>
    
    <!-- Homework layout strings -->
    <string name="all">All</string>
    <string name="classes">Classes</string>
    <string name="homework">New Homework</string>
    <string name="type">Type</string>
    <string name="back">Back</string>
    <string name="homeworkName">Homework</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="homework_label">Name of assignment</string>
    
    <!-- Calendar layout string -->
    <string name="homework_header">Homework</string>
    <string name="classes_header">Classes</string>
    <string name="calendar">Calendar</string>
    
    <!-- Class strings -->
    <string name="add_class">Add a Class</string>
    <string name="choose_color">Choose a color</string>
    <string name="class_name">Class name</string>
    
    <!-- Action bar strings -->
    <string name="plus">+</string>
    
    <!-- Dialog strings -->
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>
